@@ -11,6 +11,7 @@ from django.utils.encoding import force_str
 from unicef_vision.exceptions import VisionException
 from unicef_vision.loaders import FileDataLoader, VisionDataLoader
 from unicef_vision.utils import get_vision_logger_domain_model
+from unicef_vision.settings import INSIGHT_DATE_FORMAT
 
 logger = logging.getLogger(__name__)
 
@@ -152,15 +153,12 @@ class MultiModelDataSynchronizer(VisionDataSynchronizer):
     def _convert_records(self, records):
         if isinstance(records, list):
             return records
-        try:
-            return records["ROWSET"]["ROW"]
-        except (TypeError, ValueError):
-            return []
+        return [] if not records else records["ROWSET"]["ROW"]
 
     def _get_field_value(self, field_name, field_json_code, json_item, model):
         if field_json_code in self.DATE_FIELDS:
             # parsing field as date
-            return datetime.datetime.strptime(json_item[field_json_code], '%d-%b-%y').date()
+            return datetime.datetime.strptime(json_item[field_json_code], INSIGHT_DATE_FORMAT).date()
         elif field_name in self.MODEL_MAPPING.keys():
             # this is related model, so we need to fetch somehow related object.
             related_model = self.MODEL_MAPPING[field_name]
