@@ -1,6 +1,8 @@
 Release 0.6 (in development)
 ----------------
 * added support for django 3.1
+* using settings env for date format
+* small refactoring
 
 
 Release 0.5
